--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       <div class="page-header">
         <h1>Bad UPnP/SSDP - Check for WAN UPnP listening</h1>
       </div>
-      <p class="lead">Please enable javscript for this test to work...</p>
+      <p class="lead">Please enable javascript for this test to work...</p>
       <p>Why is listening for UPnP/SSDP on WAN bad? <a href="https://blog.cloudflare.com/ssdp-100gbps/">Cloudflare wrote a blog post</a> that you may find interesting here</p>
     </div>
 
